--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "prettier-check": "npx prettier --check \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "prettier-check": "npx prettier --check \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Jhonder Quintero",
@@ -29,6 +30,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.12.0",
     "style-loader": "^3.3.1",
