bundle analyzer and babel/runtime

--- a/.babelrc
+++ b/.babelrc
@@ -4,9 +4,17 @@
     [
       "@babel/preset-react",
       {
-        "runtime": "automatic" // Evite import React from 'react' in .tsx files
+        "runtime": "automatic"
       }
     ],
-    "@babel/preset-typescript" // Transpile typescript
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ]
 }
